Mise à jour du projet : modification de ...

--- a/dashboards/pvadmin.html
+++ b/dashboards/pvadmin.html
@@ -263,22 +263,22 @@
     </div>
 
     <!-- Confirmation Modal -->
-    <div id="confirmModal" class="modal" style="display: none;" role="dialog" aria-labelledby="confirmModalTitle" aria-hidden="true">
-        <div class="modal-content">
-            <span class="close-btn" aria-label="Fermer">&times;</span>
-            <div class="modal-header">
-                <h2 id="confirmModalTitle">Confirmation</h2>
-            </div>
-            <div class="modal-body">
-                <p id="confirmMessage"></p>
-            </div>
-            <div class="modal-footer">
-                <button class="btn close-modal">Annuler</button>
-                <button id="confirmBtn" class="btn-primary">Confirmer</button>
-            </div>
+   <!-- Confirmation Modal -->
+<div id="confirmModal" class="modal" style="display: none;" role="dialog" aria-labelledby="confirmModalTitle" aria-hidden="true">
+    <div class="modal-content">
+        <span class="close-btn" aria-label="Fermer">&times;</span>
+        <div class="modal-header">
+            <h2 id="confirmModalTitle">Confirmation</h2>
+        </div>
+        <div class="modal-body">
+            <div id="confirmMessage"></div>
+        </div>
+        <div class="modal-footer">
+            <button id="cancelBtn" class="btn btn-secondary">Annuler</button>
+            <button id="confirmBtn" class="btn btn-primary">Confirmer</button>
         </div>
     </div>
-    
+</div>
     <!-- Edit PV Modal -->
     <div id="editModal" class="modal" style="display: none;" role="dialog" aria-labelledby="editModalTitle" aria-hidden="true">
         <div class="modal-content">
