Mise à jour du projet : modification de ...

--- a/dashboards/gestion.html
+++ b/dashboards/gestion.html
@@ -65,6 +65,13 @@
                     Rechercher
                 </button>
             </div>
+            
+<div class="demandes-container" id="demandesContainer" style="display: none;">
+    <h3>Demandes en attente</h3>
+    <div class="demandes-list" id="demandesList">
+        <!-- Demandes will be loaded here -->
+    </div>
+</div>
 
             <div id="professeurs-table">
                 <table class="user-table">
