--- a/dashboards/register.html
+++ b/dashboards/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../src/css/register.css">
     <title>Register Page</title>
-    <script src="../js/register.js"></script>
+   
 </head>
 <body>
     <div class="welcome-text">Welcome to ExamEye</div>
@@ -70,6 +70,6 @@
             if (!isValid) event.preventDefault();
         });
     </script>
-
+ <script src="../src/js/register.js"></script>
 </body>
 </html>
