--- a/dashboards/planningadmin.html
+++ b/dashboards/planningadmin.html
@@ -11,7 +11,7 @@
     
 </head>
 <body>
-  <script src="/src/js/planningadmin.js " defer></script>
+  <script src="../src/js/planningadmin.js " defer></script>
   <div class="sidebar left-sidebar">
     <div class="logo">
       <img src="/src/img/logo.jpg" alt="ExamEye Logo" />
