--- a/index.html
+++ b/index.html
@@ -676,11 +676,11 @@
             
             
             <div class="nav-buttons">
-                <a href="login.html" class="auth-button login-btn">
+                <a href="dashboards/login.html" class="auth-button login-btn">
                     <i class="fas fa-sign-in-alt"></i>
                     Se connecter
                 </a>
-                <a href="register.html" class="auth-button signup-btn">
+                <a href="dashboards/register.html" class="auth-button signup-btn">
                     <i class="fas fa-user-plus"></i>
                     Créer un compte
                 </a>
@@ -689,11 +689,11 @@
     </header>
    
     <div class="mobile-menu" id="mobileMenu">
-        <a href="login.html" class="auth-button login-btn">
+        <a href="dashboards/login.html" class="auth-button login-btn">
             <i class="fas fa-sign-in-alt"></i>
             Se connecter
         </a>
-        <a href="register.html" class="auth-button signup-btn">
+        <a href="dashboards/register.html" class="auth-button signup-btn">
             <i class="fas fa-user-plus"></i>
             Créer un compte
         </a>
