--- a/dashboards/prof.html
+++ b/dashboards/prof.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="/src/css/prof.css">
 </head>
 <body>
-    <script src="/src/js/prof.js" defer></script>
+    <script src="/src/js/prof.js" defer></script>*
+    
+    <script src="/src/js/logout.js" defer></script>
     <button class="sidebar-toggle" id="sidebarToggle">
         <i class="fas fa-bars"></i>
     </button>
@@ -49,8 +51,7 @@
                                     <i class="fas fa-user"></i> Mon Compte
                                 </a>
                             </li>
-                            <li><a href="#"><i class="fas fa-cog"></i> Paramètres</a></li>
-                            <li><a href="#"><i class="fas fa-sign-out-alt"></i> Déconnexion</a></li>
+                            <li><a href="#" id="logoutButton"><i class="fas fa-sign-out-alt"></i> Déconnexion</a></li>
                         </ul>
                     </div>
                 </div>
