--- a/dashboards/register.html
+++ b/dashboards/register.html
@@ -8,7 +8,7 @@
     <title>Register Page</title>
 </head>
 <body>
-    <div class="welcome-text">Welcome to ExamEye</div>
+    <div class="welcome-text">Bienvenue dans ExamEye</div>
     <div class="container">
         <!-- Notification div -->
         <div id="notification" class="notification" style="display: none;">
@@ -16,7 +16,7 @@
         </div>
         
         <div class="register-box">
-            <h2>Register</h2>
+            <h2>Inscription</h2>
             <form id="registerForm">
                 <div class="input-box">
                     <input type="text" name="nom" id="nom" placeholder="Nom complet" required>
@@ -35,7 +35,7 @@
                     <label class="role-label">Sélectionner un rôle:</label>
                     <div class="input-box role-options">
                         <label>
-                            <input type="radio" name="role" value="administrateur" required> Administrateur
+                            <input type="radio" name="role" value="administrateur" required> Chef Departement
                         </label>
                         <label>
                             <input type="radio" name="role" value="professeur" required> Professeur
@@ -44,7 +44,7 @@
                 </div>
 
                 <button type="submit" class="register-btn">S'inscrire</button>
-                <p>Vous avez déjà un compte? <a href="../index.html">Se connecter</a></p>
+                <p>Vous avez déjà un compte? <a href="login.html">Se connecter</a></p>
             </form>
         </div>
     </div>
