--- a/dashboards/login.html
+++ b/dashboards/login.html
@@ -12,25 +12,20 @@
 <body>
     <div class="container">
         <div class="content">
-            <div class="welcome-text">Welcome to ExamEye</div>
+            <div class="welcome-text">Bienvenue dans ExamEye</div>
         <div class="login-box">
-            <h2>Login</h2>
+            <h2>Connexion</h2>
             <form id="loginForm" action="../db/login.php" method="POST">
 
                 <div class="input-box">
                     <input type="text" id="email" name="email" placeholder="EMAIL" required>
                 </div>
                 <div class="input-box">
-                    <input type="password" id="password" name="password" placeholder="Password" required>
+                    <input type="password" id="password" name="password" placeholder="Mot de passe" required>
                 </div>
-                <div class="options">
-                    <label class="remember-me">
-                        <input type="checkbox"> Remember Me
-                    </label>
-                    <a href="#" class="forgot-password">Forgot password?</a>
-                </div>
-                <button type="submit" class="login-btn">Login</button>
-                <p>Don't have an account? <a href="register.html">Register</a></p>
+                
+                <button type="submit" class="login-btn">Connexion</button>
+                <p> Vous n'avez pas de compte ? <a href="register.html">Inscrivez-vous</a></p>
             </form>
         </div>
     </div>
