Add new files for convocation and account management

--- a/dashboards/convocationadmin.html
+++ b/dashboards/convocationadmin.html
@@ -36,14 +36,20 @@
       <div class="header">
         <i class="fas fa-chart-line"></i> Convocations
         <div class="account-container" id="accountContainer">
-          <div class="account-icon" id="accountIcon"><i class="fas fa-user"></i></div>
-          <div class="account-dropdown" id="accountDropdown">
-            <ul>
-              <li><i class="fas fa-user"></i><a href="compte.html" style="text-decoration: none; color: inherit;"> MY ACCOUNT</a></li>
-              <li><i class="fas fa-cog"></i> Paramètres</li>
-              <li><i class="fas fa-sign-out-alt"></i> Déconnexion</li>
-            </ul>
+          <div class="account-icon" id="accountIcon">
+              <i class="fas fa-user"></i>
           </div>
+          <div class="account-dropdown" id="accountDropdown">
+              <ul>
+                  <li>
+                      <a href="compte.html">
+                          <i class="fas fa-user"></i> Mon Compte
+                      </a>
+                  </li>
+                  <li><a href="#" id="logoutButton"><i class="fas fa-sign-out-alt"></i> Déconnexion</a></li>
+              </ul>
+          </div>
+      </div>
         </div>
       </div>
 
