--- a/dashboards/notificationadmin.html
+++ b/dashboards/notificationadmin.html
@@ -50,11 +50,12 @@
                     </div>
                     <div class="account-dropdown" id="accountDropdown">
                         <ul>
-                            <li><i class="fas fa-user"></i>
-                                <a href="compte.html" style="text-decoration: none; color: inherit;"> MY ACCOUNT</a>
+                            <li>
+                                <a href="compte.html">
+                                    <i class="fas fa-user"></i> Mon Compte
+                                </a>
                             </li>
-                            <li><i class="fas fa-cog"></i> Paramètres</li>
-                            <li><i class="fas fa-sign-out-alt"></i> Déconnexion</li>
+                            <li><a href="#" id="logoutButton"><i class="fas fa-sign-out-alt"></i> Déconnexion</a></li>
                         </ul>
                     </div>
                 </div>
