--- a/dashboards/planningadmin.html
+++ b/dashboards/planningadmin.html
@@ -6,8 +6,8 @@
   <title>ExamEye – Planning</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
-  
-  <link rel="stylesheet" href="/src/css/planningadmin.css">
+  <link rel="stylesheet" href="../src/css/chefdep.css">
+  <link rel="stylesheet" href="../src/css/planningadmin.css">
     
 </head>
 <body>
@@ -33,14 +33,20 @@
       <div class="header">
         <i class="fas fa-table"></i> Planning
         <div class="account-container" id="accountContainer">
-          <div class="account-icon" id="accountIcon"><i class="fas fa-user"></i></div>
-          <div class="account-dropdown" id="accountDropdown">
-            <ul>
-              <li><i class="fas fa-user"></i><a href="compte.html" style="text-decoration: none; color: inherit;"> MY ACCOUNT</a></li>
-              <li><i class="fas fa-cog"></i> Paramètres</li>
-              <li><i class="fas fa-sign-out-alt"></i> Déconnexion</li>
-            </ul>
+          <div class="account-icon" id="accountIcon">
+              <i class="fas fa-user"></i>
           </div>
+          <div class="account-dropdown" id="accountDropdown">
+              <ul>
+                  <li>
+                      <a href="compte.html">
+                          <i class="fas fa-user"></i> Mon Compte
+                      </a>
+                  </li>
+                  <li><a href="#" id="logoutButton"><i class="fas fa-sign-out-alt"></i> Déconnexion</a></li>
+              </ul>
+          </div>
+      </div>
         </div>
       </div>
 
