--- a/dashboards/pv.html
+++ b/dashboards/pv.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <script src="../src/js/pv.js" defer></script>
+    <script src="/src/js/pv.js" defer></script>
   <button class="sidebar-toggle" id="sidebarToggle">
     <i class="fas fa-bars"></i>
 </button>
@@ -56,11 +56,12 @@
                     </div>
                     <div class="account-dropdown" id="accountDropdown">
                         <ul>
-                            <li><i class="fas fa-user"></i>
-                                <a href="compte.html" style="text-decoration: none; color: inherit;">MY ACCOUNT</a>
+                            <li>
+                                <a href="compte.html">
+                                    <i class="fas fa-user"></i> Mon Compte
+                                </a>
                             </li>
-                            <li><i class="fas fa-cog"></i> Paramètres</li>
-                            <li><i class="fas fa-sign-out-alt"></i> Déconnexion</li>
+                            <li><a href="#" id="logoutButton"><i class="fas fa-sign-out-alt"></i> Déconnexion</a></li>
                         </ul>
                     </div>
                 </div>
